checked naming, rebuilded

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
         <header class="header">
           <div class="container">
             <div class="header__inner">
-              <a href="https://ashuksu.github.io/landingpage/public/" class="logo"
-                ><img src="img/logo-1.png" alt="Site name" width="28" height="28"
+              <a href="https://ashuksu.github.io/runes/public/" class="logo"
+                ><img src="img/logo-1.png" alt="Runes" width="28" height="28"
               /></a>
               <div class="menu" data-menu="opener"><span></span> <span></span> <span></span></div>
               <nav class="nav" data-menu="container">
@@ -399,8 +399,8 @@
       <footer class="footer">
         <div class="container">
           <div class="footer__inner">
-            <a href="https://ashuksu.github.io/landingpage/public/" class="logo"
-              ><img src="img/logo-3.png" alt="Site name" width="70" height="70" /> </a
+            <a href="https://ashuksu.github.io/runes/public/" class="logo"
+              ><img src="img/logo-3.png" alt="Runes" width="70" height="70" /> </a
             ><a class="footer__dev" href="https://github.com/ashuksu/" target="_blank">ASHUKSU</a>
           </div>
         </div>
